astroapp-template/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    external-dns.alpha.kubernetes.io/ttl: "10"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - UPDATE
      secretName: tls-secret
  rules:
  - host: UPDATE
    http:
      paths:
      - path: /
        backend:
          service:
            name: app
            port:
              number: 80
        pathType: Prefix
